Reviewed the intro parts (ch1 and ch2)

--- a/report/sections/ch1-initiatingproblem.tex
+++ b/report/sections/ch1-initiatingproblem.tex
@@ -1,2 +1,2 @@
 \section{Initiating Problem}
-The initiating problem selected is \textit{unknown terrain mapping and navigation}.
+The selected initiating problem is \textbf{\textit{unknown terrain mapping and navigation}}.
