--- a/report/sections/ch1-intro.tex
+++ b/report/sections/ch1-intro.tex
@@ -7,23 +7,22 @@ We started out the project with a brainstorming session where we discussed diffe
 	\item Maze navigation
 \end{itemize}
 
-We could identify a common theme amongst these problems, which led us to the conclusion that the problem domain should be within mapping and navigations. 
+We could identify a common theme amongst these problems, which led us to the conclusion that the problem domain should be within mapping and navigation. 
 
 \begin{figure}[!h]
 	\centering
 	\includegraphics[scale=.7]{images/high-level-block.pdf}
-	\caption{High level block diagram expanding upon our brainstorming session}
+	\caption{High-level block diagram expanding upon our brainstorming session}
 	\label{fig:highlevelblock}
 \end{figure}
 
-Furthermore we decided to cut down and expand upon the problem-domain we set for ourselves.
-This led to more discussions on possible outcomes, uses and benefits of such system.
+Furthermore we decided to expand upon the problem-domain we set for ourselves and to explore it further. This led to more discussions on possible outcomes, uses and benefits of such system.
 
 \begin{figure}[!h]
 	\centering
 	\includegraphics[scale=.7]{images/low-level-block.pdf}
-	\caption{Low level block diagram expanding upon the common theme we found}
+	\caption{Low-level block diagram expanding upon the common theme we found}
 	\label{fig:lowlevelblock}
 \end{figure}
 
-We decided to go on with the problem domain and started using a W-diagram to expand upon it further and identify the parts needed to be researched to come up with a solution.
+We decided to continue on with the selected problem-domain and started using a W-diagram model to expand upon further and to identify the parts needed to be researched. This method will help us to come up with a solution to the problem at hand.
