--- a/report/sections/preface.tex
+++ b/report/sections/preface.tex
@@ -3,7 +3,7 @@
 
 %TODO: P2 project preface
 
-From hereby on, every mention of 'we' refers to the five co-authors listed below.
+From hereby on, every mention of 'we' refers to the four co-authors listed below.
 
 
 \vspace{\baselineskip}\hfill Aalborg University, \today
