Finished reviewing when and where

--- a/report/sections/ch2-intro.tex
+++ b/report/sections/ch2-intro.tex
@@ -12,22 +12,24 @@ Since the beginning of time, early human settlements were eager to explore their
 \end{figure}
 
 \subsection{When is this actually a problem?}
-Mapping unknown terrains becomes a problem when new planets are discovered and mapping of the surface and its atmosphere is required for further exploration and investigation. Scientists use the so-called Earth Similarity Index (ESI) for mapping extrasolar planets (also called exoplanets) for potentially habitable places in the Universe.\cite{exoplanets}\cite{esi}. The ESI implies many factors, like surface temperature and other Earth-like properties. 
+Mapping unknown terrains becomes a problem when new planets are discovered and mapping of the surface and its atmosphere is necessary for further exploration and investigation of the planet. Scientists use the so-called Earth Similarity Index (ESI) for mapping extrasolar planets (also called exoplanets) for potentially habitable places in the Universe\cite{exoplanets}\cite{esi}. The ESI implies many factors, like surface temperature and other Earth-like properties. 
 
-Another scenario is underwater exploration, where trained divers are unable to explore and map the underwater terrain due to its depth and dangerous circumstances. In these cases robots and submarines, that can either autonomously or remote-controlled can take up the task of mapping the bottom of the ocean. It is also much faster and more reliable than sending down people to do the same task.
+Another scenario is underwater exploration, where trained divers are unable to explore and map the underwater terrain due to its depth and dangerous circumstances. In these cases robots and submarines, that can either autonomously or remotely controlled, can take up the task of mapping the bottom of the ocean. It is also much faster and more reliable than sending down people to do the same task.
 
-Besides exploration, the task of mapping unknown terrains is used in hostage situation and natural disasters as well, where people cannot enter a specific area without that being mapped upfront for various factors, like radiation leakage or armed terrorists. One example would be the Fukushima Nuclear Plant catastrophe in Fukushima, Japan on March, 2011. After the leakage in the reactor, rescue forces and scientist used autonomous drones to map the inside of the factory\cite{fukushima}, which was put under quarantine for high levels or radiation and therefore no person was allowed inside of the building without proper precautions. Drones and autonomous robots are perfect for scenarios like this.
+Besides exploration, the task of mapping unknown terrains is used in the event of a hostage situation or natural disaster as well, where people cannot enter a specific area without that being mapped upfront for various factors, like radiation leakage or armed terrorists. One example would be the Fukushima Nuclear Plant catastrophe in Fukushima, Japan on March, 2011. After the leakage in the reactor, rescue forces and scientist used autonomous drones to map the inside of the factory\cite{fukushima}, which was put under quarantine for high levels or radiation and therefore no person was allowed inside of the building without proper precautions. Drones and autonomous robots are perfect for scenarios like this.
 
 \clearpage
 \subsection{Where does this problem actually occur?}
-Unknown terrain can be defined as a terrain where no mapping has been done before.
+An unknown terrain can be defined as a terrain where no mapping has been done before.
 
-The bottom of the ocean is mostly sand, mud, and water [%TODO: citation needed.
-]. This makes it difficult to navigate with a rover, but relatively simple to navigate with a submarine. In water, sensors that use sound need to be calibrated to work with the correct pressure of the water surrounding it, which varies with the depth of the water. If the water is murky, light based sensors may also not work, depending on the wavelength of the light they use. Light also refracts in water depending on the water density. It is possible to remote-control vehicles in the bottom of the ocean.
+The bottom of the ocean is mostly sand, mud, and water %TODO: citation needed
+. This makes it difficult to navigate with a rover, but relatively simple with a submarine. In water, sensors that use sound need to be calibrated to work with the correct pressure of the surroundings, which varies with the depth of the water. If the water is murky, light-based sensors may also not work, depending on the wavelength of the light they use. Light also refracts in water depending on the water density. It is possible to remote-control vehicles on the bottom of the ocean. %TODO: needs reference
 
-Other planets can be much more complicated to navigate. The consistency of they atmosphere and terrain may be not completely understood. This means that there is a higher chance of a rover being stuck on loose terrain, falling down sheer faces, and so on. It may also be the case that the planet has no atmosphere, so a drone would not be able to hover. One of the biggest issues with extraplanetary exploration is input lag. Other planets are very far away, which means that signals traveling to these distant places can take several minutes at least and years at most to reach from the Earth, thus automation is better suited for this task. Other planets share the issues that the bottom of the ocean has with sensors.
+Other planets can be much more complicated to navigate. The consistency of they atmosphere and terrain may be not completely understood. This means that there is a higher chance of a rover being stuck on a loose terrain, falling down sheer faces, and so on. It may also be the case that the planet has no atmosphere, so a drone would not be able to hover. One of the biggest issues with extraplanetary exploration is input lag. Other planets are very far away, which means that signals traveling to these distant places can take several minutes at least and years at most to reach from planet Earth. Thus automation is better suited for this task. Other planets share the issues, that the bottom of the ocean has, with sensors.
+%TODO: last sentance needs rephrasing
 
 Disaster scenarios can also be said to be unknown terrain. Disaster scenarios means that the terrain might be loose or difficult to navigate, so a drone might be best suited for it. In most cases disaster scenarios happen in locations where the vehicle can be controlled manually.
+%TODO: Paragraph needs rephrasing
 
 \subsection{How is it a problem?}
 
