--- a/report/sections/ch1-intro.tex
+++ b/report/sections/ch1-intro.tex
@@ -3,7 +3,7 @@ We started out the project with a brainstorming session where we discussed diffe
 	\item Noise pollution
 	\item Navigation using echolocation
 	\item Re-usability of heat waste
-	\item Mapping unknown terrains without any external technologies
+	\item Mapping of unknown terrains without any external technologies
 	\item Maze navigation
 \end{itemize}
 
@@ -16,7 +16,7 @@ We could identify a common theme amongst these problems, which led us to the con
 	\label{fig:highlevelblock}
 \end{figure}
 
-Furthermore we decided to expand upon the problem-domain we set for ourselves and to explore it further. This led to more discussions on possible outcomes, uses and benefits of such system.
+Furthermore we decided to expand upon the problem-domain we set for ourselves and to deeper explore it. This led to more discussions on possible outcomes, uses and benefits of such system.
 
 \begin{figure}[!h]
 	\centering
@@ -25,4 +25,4 @@ Furthermore we decided to expand upon the problem-domain we set for ourselves an
 	\label{fig:lowlevelblock}
 \end{figure}
 
-We decided to continue on with the selected problem-domain and started using a W-diagram model to expand upon further and to identify the parts needed to be researched. This method will help us to come up with a solution to the problem at hand.
+We decided to continue on with the selected problem-domain and started using a W-diagram model to expand upon it further and to identify the parts needed to be researched. This method will help us to come up with a solution to the problem at hand.
