--- a/report/sections/ch2-stakeholder-analysis.tex
+++ b/report/sections/ch2-stakeholder-analysis.tex
@@ -1,19 +1,19 @@
 \section{Stakeholder analysis}
 	
 \subsection{Interested parties}
-Interested parties are the groups of people who are being affected either negatively or positively by the product in question. They have some influence over the development, as the trends and actions of these interested parties has to be taken into consideration by the development team.
+Interested parties are the groups of people who are being affected either negatively or positively by the problem in question. They have some influence over the development, as the trends and actions of these interested parties has to be taken into consideration by the development team.
 
 \subsubsection{NASA}
-The National Aeronautics and Space Administration, or more commonly known as NASA is a governmental agency in the United States, responsible for aerospace research and civilian space programs. Many manned- and unmanned missions to new planets require extensive research of that planet prior to the mission. It might even require sending exploratory rovers or satellites to examine the environment and to map out possible landing sites. Rovers are commonly used and equipped with similar technology that we are producing, as in all cases, the environment is unknown, external technologies, like GPS is not available and no maps are generated of these planets without prior research missions. 
+The National Aeronautics and Space Administration, or more commonly known as NASA is a governmental agency in the United States, responsible for aerospace research and civilian space programs. Many manned- and unmanned missions to new planets require extensive research of that planet prior to the mission. It might even require sending exploratory rovers or satellites to examine the environment and to map out possible landing sites. Rovers are commonly used and equipped with similar technology that we are producing, as in all cases, the environment is unknown, external technologies, like GPS is not available and no maps are generated of these planets without previous research missions. 
 
 \subsubsection{ESA}
-The European Space Agency or simply ESA, is the European counter-part of NASA, governed by 22 member states, with the aim of space exploration and research. Similar interest applies to ESA as to NASA, therefore they can be classified as an Interested party in our assesment.
+The European Space Agency or simply ESA, is the European counter-part of NASA, governed by 22 member states, with the aim of space exploration and research. Similar interest applies to ESA as to NASA, therefore they can be classified as an Interested party in our assessment.
 
 \subsubsection{The Royal Danish Army}
-The Royal Danish Army, or simply The Army, is the land warfare branch of the Danish Defence Forces, together with the Danish Home Guard. Their main tasks is to prevent conflicts and wars, through crisis management and co-operation with NATO and allied forces\cite{armytasks}. In case of a conflict or war, drones are commonly used to map out potential war sites before a planned attack, and therefore The Army could potentially implement our mapping technology.
+The Royal Danish Army, or simply The Army, is the land warfare branch of the Danish Defence Forces, together with the Danish Home Guard. Their main tasks is to prevent conflicts and wars, through crisis management and co-operation with NATO and allied forces\cite{armytasks}. In case of a conflict or war, drones are commonly used to map out potential war sites before a planned attack or defence, and therefore The Army could potentially implement our mapping technology.
 
 \subsubsection{The National Police}
-Also known as \textit{Rigspolitet}\cite{Police}, The National Police is the national police force of Denmark, but also having authority over regions governed by The Kingdom of Denmark, the Faroe Islands and Greenland. As the nation's main police force, it is part of their duty to avert any danger or possible terrorist attack in order to protect the population and public peace. As we identified dealing with terrorist attacks and hostage situations as a possible application for our technology, The National Police would be a potential user of such technology in these cases, assisting them with mapping a building where a kidnapping takes place or any other criminal offense.
+Also known as \textit{Rigspolitet}\cite{Police}, The National Police is the national police force of Denmark, but also having authority over regions governed by The Kingdom of Denmark, the Faroe Islands and Greenland. As the nations main police force, it is part of their duty to avert any danger or possible terrorist attack in order to protect the population and public peace. As we identified dealing with terrorist attacks and hostage situations as a possible application for our technology, The National Police would be a potential user of such technology in these cases, assisting them with mapping a building where a kidnapping takes place or any other criminal offence.
 
 \subsection{Actors}
 Actors are a subset of \textit{Interested parties}, who have any influence on the development of the project, either by financing it, providing knowledge or help the development of the project.
@@ -22,7 +22,8 @@ Actors are a subset of \textit{Interested parties}, who have any influence on th
 Technology carriers are a subset of \textit{Actors} who have influence to change the direction of the project.
 
 \subsubsection{Danish Explosive Ordnance Disposal squad} 
-Also known as \textit{Ammunitionsrydningstjenesten} or \textit{EOD} in Danish, refers to the Danish bomb disposal squad \cite{EOD}. They are the one called in for emergency situations or bomb squares, where they use robots to map the area and find the possible suspicious items to investigate. The function of this squad is very crucial to the Danish Army, as these men and women need special training and education to work with these tools and technologies to ensure the public safety in these special cases. The interest that the Danish EOD squad would have in this project would be in regards of mapping technology and autonomous navigation in unknown terrains. Such technology could be used on rovers that bomb squads generally use for going in to building to find possible threats and to investigate it. This could mean they would have possible interest in the development, customization of the project to their needs and even financial interest. They are also considered as a potential users and carriers of this technology.
+Also known as \textit{Ammunitionsrydningstjenesten} or \textit{EOD} in Danish, refers to the Danish bomb disposal squad \cite{EOD}. They are the one called in for emergency situations or bomb squares%What? - Thomas
+, where they use robots to map the area and find the possible suspicious items to investigate. The function of this squad is very crucial to the Danish Army, as these men and women need special training and education to work with these tools and technologies to ensure the public safety in these special cases. The interest that the Danish EOD squad would have in this project would be in regards of mapping technology and autonomous navigation in unknown terrains. Such technology could be used on rovers that bomb squads generally use for going in to building to find possible threats and to investigate it. This could mean they would have possible interest in the development, customization of the project to their needs and even financial interest. They are also considered as a potential users and carriers of this technology.
 
 \subsubsection{Group H103}	
 Group H103 is the group who develops the solution for this project. The group consists of:
