--- a/report/sections/ch2-theory_Anthony.tex
+++ b/report/sections/ch2-theory_Anthony.tex
@@ -8,18 +8,18 @@ For the purpose of exploration and resource gathering, planets can be split into
 \end{itemize}
 
 There is very little reason to explore a gassy giant, as they smoothly transition between gas, liquid, and solid. This means that it is extremely difficult to colonize such a planet, or build anything on it for that matter, due to the layers of condensed helium and hydrogen that make out their atmosphere\cite{outerplanetatmosphere}.
-In the other hand, Earth-like planets have a larger variety of resources, and it is easier to build on them. These planets are often composed largely of metals and silicon, which is what gives them their rocky and sandy surface.
+On the other hand, Earth-like planets have a larger variety of resources, and it is easier to build on them. These planets are often composed largely of metals and silicon, which is what gives them their rocky and sandy surface.
 
 \section{Environment}
 \subsection{Atmosphere}
-There are quite a few planets, in our solar system, with a negligible atmosphere[citation]. In these planets sound based sensors cannot work
+There are quite a few planets, in our solar system, with a negligible atmospheres[citation]. On these planets sound based sensors cannot work
 %TODO: Make sure to move this theoretical section after Gustavo's part about sensors
 , but light based sensors might even work better. These planets also tend to have a temperature very close to absolute zero\cite{planetstemp}.
-Planets with an atmosphere can be much harder to cope with. In these planets there can be threats such as, high winds, high pressure, high temperatures, corrosive gases, and liquids. When designing equipment for such environment, the specific environment must be kept in mind.
+Planets with an atmosphere can be much harder to cope with. On these planets there can be threats such as, high winds, high pressure, high temperatures, corrosive gases, and liquids. When designing equipment for such environment, the specific environment must be kept in mind.
 
 \subsection{Terrain}
 Earth-like planets are, by definition, rocky/sandy planets, which tend to have mountains, canyons, and craters.
-Earth-like planets don't have a very big variation in terrain, as most of them do not have any liquid substances that could change the terrain.(maybe remove this line, in general, planets without liquids are very similar)
+Earth-like planets do not have a very big variation in terrain, as most of them do not have any liquid substances that could change the terrain.(maybe remove this line, in general, planets without liquids are very similar)
 
 %\section{Equipment}
 %\subsection{Drones}
