--- a/report/sections/frontpage.tex
+++ b/report/sections/frontpage.tex
@@ -13,7 +13,7 @@
 
 % Title
 \HRule \\[0.9cm]
-{ \Huge \bfseries Unknown terrain mapping and navigation }\\[0.4cm]
+{ \Huge \bfseries Mapping and navigation of unknown terrain }\\[0.4cm]
 
 \HRule \\[0.5cm]
 
