More change to ch1 intro

--- a/report/sections/ch1-intro.tex
+++ b/report/sections/ch1-intro.tex
@@ -7,7 +7,7 @@ We started out the project with a brainstorming session where we discussed diffe
 	\item Maze navigation
 \end{itemize}
 
-We could identify a common theme amongst these problems, which led us to the conclusion that the problem domain should be within mapping and navigation. 
+We could identify a common theme amongst these problems, which led us to the conclusion that the problem-domain should be within mapping and navigation. 
 
 \begin{figure}[!h]
 	\centering
@@ -16,7 +16,7 @@ We could identify a common theme amongst these problems, which led us to the con
 	\label{fig:highlevelblock}
 \end{figure}
 
-Furthermore we decided to expand upon the problem-domain we set for ourselves and to deeper explore it. This led to more discussions on possible outcomes, uses and benefits of such system.
+Furthermore we decided to expand upon the problem-domain we set for ourselves and to further explore it. This led to more discussions on possible outcomes, implementations and benefits of such system.
 
 \begin{figure}[!h]
 	\centering
