Done with peer-reviewing

--- a/report/sections/ch2-risk-analysis.tex
+++ b/report/sections/ch2-risk-analysis.tex
@@ -1,5 +1,5 @@
-%NOTE: This section has to be filled out after PD has been completed. Should we moved this to Chapter 3, PD, too?
-
+%TODO: This section has to be filled out after PD has been completed. Should we moved this to Chapter 3, PD, too?
+\clearpage
 \section{Risk management}
 Possible risks that could occur before, during and after the implementation of the proposed %TODO: Insert prototype system name here
 , elaborated in this report, and presented in the form of a table together with a mitigation plan for each and every identified risk.
