--- a/report/sections/ch2-preliminary-research.tex
+++ b/report/sections/ch2-preliminary-research.tex
@@ -174,6 +174,7 @@ Refraction would cause rangefinders to become effectively blind, as neither thei
 %TODO: image{http://4.bp.blogspot.com/-Y4zXYZDJekI/Ud5C-rzi_0I/AAAAAAAACSc/EYYxL9cmy3M/s1600/Picture18.png}
 %A cite needs to be fixed above - Thomas
 
+\clearpage
 \subsection{Environment}
 \subsubsection{Atmosphere}
 There are quite a few planets, in our solar system, with a negligible atmospheres. On these planets sound based sensors cannot work, but light based ones might even work better. These planets also tend to have a temperature very close to absolute zero\cite{planetstemp}.
