--- a/report/sections/ch3-problemanalysisconclusion.tex
+++ b/report/sections/ch3-problemanalysisconclusion.tex
@@ -1,10 +1,10 @@
 \section{Conclusion of Problem Analysis}
 
-During the research for this project , we have figured out what technologies we will use when solving our problem, that is stated in the w-diagram.
-We will be using a rover to navigate around with multiple sensors. Making a 2D map of its surroundings, with the possibility of implementing equipment for 3D mapping. We will be using both sound and light sensors for navigation and mapping. Ultrasonic sensors will be used for close encounter manoeuvres for their high precision at a close range (up to 5m). For mapping we will be using a laser sensor, that will either automatically turn 360$\deg$ or we will implement a motor to rotate the sensor.
-The rover will both be remote controlled and autonomous for navigation. For reference points we will be using the ultrasonic sensors. The control computer will be a Raspberry Pi running a Debian Unix. The reason for using the Raspberry Pi is that it can multi-task, read many sensors at the same time. And build the 2D map on the go. For other microcontrollers, like the Arduino, we would only be able to collect data and need to build the map from it later, using another computer.  
+During the research for this project, we have figured out what technologies we will use when solving our problem, that is stated in the W-diagram.
+We will be using a rover to navigate around with multiple sensors. Making a 2D map of its surroundings, with the possibility of implementing equipment for 3D mapping. We will be using both sound and light sensors for navigation and mapping. Ultrasonic-sensors will be used for close encounter maneuvers for their high precision at a close range (up to 5m). For mapping we will be using a laser sensor, that will either automatically turn 360$\deg$ or we will implement a motor to rotate the sensor.
+The rover will both be remote controlled and autonomous for navigation. For reference points we will be using the ultrasonic-sensors. The control computer will be a Raspberry Pi running a Debian Unix operating system. The reason for using the Raspberry Pi is that it can multi-task, read many sensors at the same time and build the 2D map on the go. For other microcontrollers, like the Arduino, we would only be able to collect data and need to build the map from it later, using another computer.  
 
-
+%TODO: Remove this at some points.
 %During the research for this project, we have figured out which technologies we will use when solving our problem statement. Through research we have looked at the different stakeholders and also taken into account the different health and safety measures and the environmental impact.
 %We will be using RFID to monitor and keep track of the different users of the locking system, for this project we will be using passive RFID, since this is the technology used in our student cards and other forms of ID cards. This will make it easy for us to integrate this system into working environments, where some sort of ID system already is in place. 
 %We gathered some data from the bicycle sheds at Aalborg University Esbjerg, and seen that the mounted locks are the most commonly used locks in our sample. Besides seeing how popular the mounted lock is, we have also seen how the chain locks are used in an ineffective manner. The reason for this is that most of the bicycles are not equipped with locks able to secure themselves to the surroundings, since the most common type is the mounted lock.
