--- a/report/sections/ch3-problemdelimitation.tex
+++ b/report/sections/ch3-problemdelimitation.tex
@@ -13,9 +13,9 @@ Based on previous discussions, the following pieces have been selected:
 \end{description}
 
 \subsection{Prototype}
-The main limiting factor for us is time. In the time frame of this project we cannot build a full scope product, finding all the parts, ordering, and assembling them completely would take too long. Furthermore we do not have the tools to build a full scope product either. Hence we will build a prototype as a proof of concept.
+The main limiting-factor for us is time. In the time-frame of this project, we cannot build a full-scope product. Finding all the parts, ordering, and assembling them completely would take too long to complete. Furthermore, we do not have the tools or place to build a full-scope product, either. Hence we will build a prototype as a proof of concept.
 
-For prototype we decided to use a laser for making a 2D map as a proof of concept but the capability of implementing cameras for 3D mapping. A laser can be used for 3D mapping, but it would be easier to make a 3D map from cameras and it would also give you a better picture of the surroundings.
+For the prototype, we decided to use a laser for making a 2D map as a proof of concept, but the capability of implementing cameras for 3D mapping. A laser can be used for 3D mapping, but it would be easier to make a 3D map from cameras and it would also give you a better picture of the surroundings.
 
-This prototype will not have all the features we wish to have for the final product, but the the goal is to show the interaction between an laser sensor for 2D mapping and a rover navigating through unknown terrain, using a Raspberry Pi.
+This prototype will not have all the features we wish to have for the final product, but the goal is to show the interaction between an laser sensor for 2D mapping and a rover navigating through unknown terrain, using a Raspberry Pi.
 
