--- a/report/sections/ch3-requirements.tex
+++ b/report/sections/ch3-requirements.tex
@@ -11,7 +11,7 @@ This section outlines the requirements for both the prototype that we are aiming
 	\item From the laser sensor we can make a 2D map of the surroundings.
 	\item Running a Raspberry Pi that controlled mapping and navigation at the same time.
 	\item The system should include a laser sensor.
-	\item The system should include a ultra-sonic sensor.
+	\item The system should include an ultrasonic-sensor.
  	\item The prototype should be capable of implementing an 3D mapping sensor without much change.
 	
 \end{enumerate}
@@ -26,4 +26,4 @@ This section outlines the requirements for both the prototype that we are aiming
 	
 \end{enumerate}
 
-These criteria will be used to design, implement and test our implementation of the prototype later on. These requirements will be re-evaluated in the Discussion section.
+These criteria will be used to design, implement and test our implementation of the prototype later on. These requirements will be re-evaluated in the \textit{Discussion} section.
